# SpesteraEngine_Server

./: .gitignore  CMakeLists.txt  README.md  SpesteraEngine_Server.sln  test.drawio
SpesteraEngine_DatabaseServer/: .h  AccountRepository.cpp  AccountRepository.h  AccountService.cpp  AccountService.h  AccountService.pb.cc  AccountService.pb.h  AccountService.proto  Config.ini  ConfigReader.cpp  ConfigReader.h  DatabaseProtocol.pb.cc  DatabaseProtocol.proto  DbConnection.cpp  DbConnection.h  ExternalConnection.cpp  ExternalConnection.h  External_Connection.cpp  External_Connection.h  GameCharacterRepository.cpp  GameCharacterRepository.h  GameCharacterService.cpp  GameCharacterService.h  GameCharacterService.proto  Init.cpp  Init_DatabaseServer.cpp  Repository.cpp  Repository.h  SpesteraEngine_DatabaseServer.vcxproj  SpesteraEngine_DatabaseServer.vcxproj.filters  TCP_Connector.cpp  TCP_Connector.h  TcpConnector.cpp  TcpConnector.h
SpesteraEngine_GameServer/: .editorconfig  AccountService.pb.cc  AccountService.pb.h  AuthManager.cpp  BinaryCompressor.cpp  BinaryCompressor.h  Config.ini  ConfigReader.cpp  ConfigReader.h  Connection.cs  Connection.pb.cc  Connection.pb.h  Connection.proto  ConnectionsManager.cpp  ConnectionsManager.h  DatabaseProtocol.pb.cc  DatabaseProtocol.pb.h  DbServicesProvider.cpp  DbServicesProvider.h  GSProtocol.cs  GSProtocol.pb.cc  GSProtocol.pb.h  GSProtocol.proto  GameCharacterService.pb.cc  GameCharacterService.pb.h  GameSession.h  Init.cpp  Init_GameServer.cpp  LoginSession.cpp  LoginSession.h  Makefile  MessageInterpreter.cpp  MessageInterpreter.h  NetworkProtocol.cs  NetworkProtocol.pb.cc  NetworkProtocol.pb.h  NetworkProtocol.proto  PlayerCharacter.cpp  PlayerCharacter.h  Player_Character.cpp  (+31 more)
SpesteraEngine_Server/: BinaryCompressor.cpp  Config.ini  ConnectionsManager.cpp  Init.cpp  Makefile  MessageInterpreter.cpp  NetworkProtocol.cs  NetworkProtocol.pb.cc  NetworkProtocol.pb.h  NetworkProtocol.proto  Player_Character.cpp  Player_Character.h  ServerHeartbeat.cpp  ServerHeartbeat.h  Session.cpp  Session.h  SpesteraConnection.cpp  SpesteraConnection.h  SpesteraEngine_Server.vcxproj  SpesteraEngine_Server.vcxproj.filters  TDM.cpp  TDM.h  TcpServer.cpp  TcpServer.h  UDP_Server.cpp  UDP_Server.h  UdpServer.cpp  UdpServer.h  h
SpesteraEngine_WebServer/: DependencyInjection.cs  Program.cs  (+2 more)
(+107 files in other folders)
